--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
     "private": true,
     "scripts": {
         "dev": "vite",
+        "develop": "concurrently \"php artisan serve\" \"vite\"",
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.20",
         "axios": "^1.1.2",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "vite": "^4.0.0"
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.16",
+        "vite": "^4.5.5"
     }
 }
